--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "assets/js/scripts.js",
   "scripts": {
     "webpack": "webpack --watch",
-    "build": "webpack"
+    "build": "webpack",
+    "start:dev": "webpack-dev-server",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -19,13 +21,14 @@
   },
   "homepage": "https://github.com/JR1994-CA/food-festival#readme",
   "devDependencies": {
-    "bootstrap": "^5.0.2",
     "file-loader": "^6.2.0",
     "webpack": "^5.42.0",
     "webpack-bundle-analyzer": "^4.4.2",
-    "webpack-cli": "^4.7.2"
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "bootstrap": "^5.0.2",
     "image-webpack-loader": "^7.0.1",
     "install": "^0.13.0",
     "jquery": "^3.6.0",
